--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
             const updateLux = async(url, element) => {
                 const sensorData = await fetch(url).then(response => response.text())
                 const target = document.getElementById(element)
-                target.innerHTML = '<h1>${sensorData}</h1>'
+                target.innerHTML = `<h1>${sensorData}</h1>`
             }
         </script>
     </head>
